hid the scrollbar, fixe the current symbole issue

--- a/packages/navigate-theme/src/styles/base/_utilities.scss
+++ b/packages/navigate-theme/src/styles/base/_utilities.scss
@@ -667,3 +667,12 @@ textarea {
   font-size: 16px;
   font-family: Nunito-Regular;
 }
+
+::-webkit-scrollbar {
+  width: 0px; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #ff0000;
+}
