--- a/packages/navigate-theme/src/styles/components/_booking-form.scss
+++ b/packages/navigate-theme/src/styles/components/_booking-form.scss
@@ -84,7 +84,7 @@
   }
 
   &__mobile-back {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     color: #06babf;
     width: 28rem !important;
     height: 3.4rem;
